fix animation on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -338,6 +338,7 @@ dialog.modal::backdrop {
 
 @media (max-width: 640px) {
   dialog.modal.center {
+    width: 100%;
     max-width: unset; /* Override browser max width */
     margin: auto; /* Force margin for Safari */
     margin-bottom: 0;
@@ -389,13 +390,13 @@ dialog.modal.closing.side {
   animation-fill-mode: forwards;
 }
 @media (max-width: 640px) {
-  dialog.modal {
+  dialog.modal.center {
     animation-timing-function: var(--ease-in-out);
   }
-  dialog.modal[open] {
+  dialog.modal.center[open] {
     animation-name: modal-sm-entry;
   }
-  dialog.modal.closing {
+  dialog.modal.center.closing {
     animation-name: modal-sm-leave;
   }
 }
